--- a/3_auto_complete.ipynb
+++ b/3_auto_complete.ipynb
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "XKt8GrM3PcJo"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
         "id": "1k8bM46wPSb2",
         "outputId": "544fd16f-b906-4d1f-ea4a-8c4ea89f4283"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +162,7 @@
         "id": "NFgW194bp437",
         "outputId": "c0b2b59c-6ede-4616-a3b3-3e076fdd913b"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
         "id": "Cyx__6Fhq_IL",
         "outputId": "5bcade9a-0bdd-40c5-d095-a2d2943bbcdb"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ptik5ggESHaf",
-        "outputId": "985ae0af-6910-4911-980f-a978f4edb200"
+        "outputId": "89279c62-40ce-4fbd-eab8-88ab2c35490f"
       },
-      "execution_count": 27,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
         "id": "ONpbvm0XXOqh",
         "outputId": "512e460b-90a8-4573-ecb9-5df200ba3373"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +404,7 @@
     {
       "cell_type": "code",
       "source": [
-        "complex_prompt = \"The dessalinization rate is 300000 m3/day.\"\n",
+        "complex_prompt = \"The desalination rate is 300000 m3/day.\"\n",
         "tokenized = tokenizer(complex_prompt)['input_ids']\n",
         "print(f\"The tokenized version of the sentence \\\"{complex_prompt}\\\" i s: \\n{tokenized}\")\n",
         "print(f\"The individual tokens are:\\n{pretiffy_tokenizer(tokenizer.convert_ids_to_tokens(tokenized))}\")"
@@ -414,18 +414,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NIqNAIk7SLFY",
-        "outputId": "5642bb40-e07e-4257-f2db-330c8b28d23a"
+        "outputId": "c55b874f-d72b-463d-897e-33055711e88b"
       },
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The tokenized version of the sentence \"The dessalinization rate is 300000 m3/day.\" i s: \n",
-            "[464, 288, 408, 14414, 1634, 2494, 318, 5867, 830, 285, 18, 14, 820, 13]\n",
+            "The tokenized version of the sentence \"The desalination rate is 300000 m3/day.\" i s: \n",
+            "[464, 748, 282, 1883, 2494, 318, 5867, 830, 285, 18, 14, 820, 13]\n",
             "The individual tokens are:\n",
-            "['The', ' d', 'ess', 'alin', 'ization', ' rate', ' is', ' 300', '000', ' m', '3', '/', 'day', '.']\n"
+            "['The', ' des', 'al', 'ination', ' rate', ' is', ' 300', '000', ' m', '3', '/', 'day', '.']\n"
           ]
         }
       ]
@@ -454,7 +454,7 @@
         "id": "K5cU6WUByeyf",
         "outputId": "e172b563-f259-4983-e80f-b3072e14f466"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,7 +498,7 @@
       "metadata": {
         "id": "_WLh39d4Y2rW"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -523,7 +523,7 @@
         "id": "gJSELjGHcEHg",
         "outputId": "fa0f427e-c2c2-4e63-b59d-2b6b11b8ab16"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +571,7 @@
         "id": "D35IVmPzattF",
         "outputId": "6f419c4b-26a4-4656-c5b2-0d9887d2feb6"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +623,7 @@
       "metadata": {
         "id": "3Rh_z6OQeJCw"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
         "id": "U44czWJngiiB",
         "outputId": "5eb704ad-39e0-4a21-cbf0-a39a3be4a3fa"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
